--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-sm-12 md-1">
                         <div class="cabecera">
                             <div class="title">
-                                <img style="margin: auto; display: block; height: 50px;width: 670px;" src="/img/titulo.png" alt="titulo">
+                                <img style="margin: auto; display: block; height: 50px;width: 670px;" src="img/titulo.png" alt="titulo">
                             </div>
                         </div>
                         
