--- a/Pro4.html
+++ b/Pro4.html
@@ -35,13 +35,13 @@ Un intérprete permite que un programa fuente escrito en un determinado leng
 
 <br> 
 </p>
-<img style="margin: auto; display: block;" src="/img/compi.jpg" alt="Compilador">
+<img style="margin: auto; display: block;" src="img/compi.jpg" alt="Compilador">
 <br><br><br>
 <p>
     Para comprender el lenguaje de maquina debe entenderse que el computador es un dispositivo electrónico digital por lo que utiliza binarios para las operaciones. Ahora bien cabe resaltar que la estructura del lenguaje de maquina está completamente adaptada a los circuitos de la maquina y muy alejada de la forma de expresión y análisis de los problemas propio de los humanos. La programación en este lenguaje es complicada, de manera que como se enfatizaba anteriormente se necesita un profundo conocimiento de la arquitectura física del computador. Dentro de las ventajas del código de maquina esta la de hacer posible que el programador utilice la totalidad de los recursos ofrecidos por el ordenador, con lo que se obtienen programas bastante eficientes en tiempo de ejecución y en ocupación de memoria.  
 </p>
 <br><br>
-<img style="margin: auto; display: block; width: 30em; height: 12em;" src="/img/compi2.png" alt="Compilador">
+<img style="margin: auto; display: block; width: 30em; height: 12em;" src="img/compi2.png" alt="Compilador">
   <br>
   <p>
     <br> 
@@ -62,7 +62,7 @@ Un intérprete permite que un programa fuente escrito en un determinado leng
     
     <br> 
   </p>  
-  <img style="margin: auto; display: block; width: 30em; height: 20em;" src="/img/pro4.PNG" alt="Inter">
+  <img style="margin: auto; display: block; width: 30em; height: 20em;" src="img/pro4.PNG" alt="Inter">
 <p>
     <br> 
 
@@ -90,9 +90,9 @@ Ya para finalizar vale la pena aclarar que, en este proyecto se manejan dos tipo
 
  
 </p>
-<img style="margin: auto; display: block; width: 30em; height: 10em;" src="/img/pro2.PNG" alt="Inter">
+<img style="margin: auto; display: block; width: 30em; height: 10em;" src="img/pro2.PNG" alt="Inter">
 <br><br>
-<img style="margin: auto; display: block; width: 30em; height: 10em;" src="/img/pepe.png" alt="Inter">
+<img style="margin: auto; display: block; width: 30em; height: 10em;" src="img/pepe.png" alt="Inter">
 <br><br>
 
 </body>
